--- a/view/authentication/login.html
+++ b/view/authentication/login.html
@@ -30,7 +30,7 @@
           <div class="card login-card p-4 shadow-sm border-0">
             <h3 class="text-center fw-bold mb-4">Iniciar Sesión</h3>
 
-            <form>
+            <form method="post">
               <div class="mb-3">
                 <label for="correo" class="form-label">Correo Electrónico <span class="text-danger">*</span></label>
                 <div class="input-group">
