--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15,3 +15,4 @@
 @import url('detalleCancha.css');
 @import url('historialCancha.css');
 @import url('gestionUsuarios.css');
+@import url('gestion-reservas.css');
