--- a/public/components/sidebar.html
+++ b/public/components/sidebar.html
@@ -4,7 +4,7 @@
   <div class="sidebar-header d-flex align-items-center justify-content-between mb-4">
     <div class="sidebar-logo d-flex align-items-center">
       <img src="/public/assets/img/logo.png" alt="Logo Canchas SV" width="36" class="me-2">
-      <h5 class="fw-bold m-0 text-white">CANCHAS<br><span class="fw-light">SV</span></h5>
+      <h5 class="fw-light">CANCHAS<br><span class="fw-light">SV</span></h5>
     </div>
     <button id="sidebar-toggle" class="sidebar-toggle btn text-white p-0" title="Expandir/Contraer menú">
       <i class="bi bi-list fs-3"></i>
