--- a/view/authentication/login.html
+++ b/view/authentication/login.html
@@ -23,7 +23,7 @@
   <div id="navbar-container"></div>
 
   <!-- LOGIN FORM -->
-  <section class="login d-flex align-items-center justify-content-center py-5">
+  <section class="auth-section cambiar d-flex align-items-center justify-content-center py-5">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-6 col-lg-5">
