--- a/view/authentication/cambiar-credenciales.html
+++ b/view/authentication/cambiar-credenciales.html
@@ -23,7 +23,7 @@
   <div id="navbar-container"></div>
 
   <!-- SECCIÓN CAMBIO DE CONTRASEÑA -->
-  <section class="cambiar d-flex align-items-center justify-content-center py-5">
+  <section class="auth-section cambiar d-flex align-items-center justify-content-center py-5">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-6 col-lg-5">
@@ -50,7 +50,6 @@
                   </span>
                 </div>
               </div>
-
               <button type="submit" class="btn btn-primary w-100 mt-3">Cambiar Contraseña</button>
             </form>
           </div>
