--- a/view/authentication/registro.html
+++ b/view/authentication/registro.html
@@ -20,7 +20,7 @@
   <div id="navbar-container"></div>
 
   <!-- FORMULARIO DE REGISTRO -->
-  <section class="registro d-flex align-items-center justify-content-center py-5">
+  <section class="auth-section cambiar d-flex align-items-center justify-content-center py-5">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-6 col-lg-5">
