--- a/public/components/sidebar.html
+++ b/public/components/sidebar.html
@@ -3,10 +3,10 @@
   <!-- HEADER: Logo + botón toggle -->
   <div class="sidebar-header d-flex align-items-center justify-content-between mb-4">
     <div class="sidebar-logo d-flex align-items-center">
-      <img src="/public/assets/img/logo.png" alt="Logo Canchas SV" width="36" class="me-2">
-      <h5 class="fw-light">CANCHAS<br><span class="fw-light">SV</span></h5>
+      <!--<img src="/public/assets/img/logo.png" alt="Logo Canchas SV" width="" class="me-2">-->
+      <h5 class="fw-light">CANCHAS SV</h5>
     </div>
-    <button id="sidebar-toggle" class="sidebar-toggle btn text-white p-0" title="Expandir/Contraer menú">
+    <button id="sidebar-toggle" class="sidebar-toggle btn p-0" title="Expandir/Contraer menú">
       <i class="bi bi-list fs-3"></i>
     </button>
   </div>
@@ -14,9 +14,9 @@
   <nav id="sidebar-menu" class="nav flex-column"><!--Items se insertan dinamicamente--></nav>
 
   <div class="sidebar-footer text-center">
-    <i class="bi bi-person-circle fs-3 mb-2 text-white"></i>
+    <i class="bi bi-person-circle fs-3 mb-2"></i>
     <div class="logout mt-2">
-      <a href="#" class="text-decoration-none text-white d-flex align-items-center justify-content-center">
+      <a href="#" class="text-decoration-none d-flex align-items-center justify-content-center">
         <i class="bi bi-box-arrow-right me-2"></i>
         <span>Salir</span>
       </a>
@@ -26,3 +26,5 @@
 
 <!-- Overlay oscuro para móviles -->
 <div class="sidebar-overlay"></div>
+
+
