--- a/view/authentication/login.html
+++ b/view/authentication/login.html
@@ -59,7 +59,7 @@
 
               <p class="text-center mt-3 text-muted" style="font-size: 0.9rem;">
                 ¿No tienes una cuenta?
-                <a href="registro.html" class="text-decoration-none text-primary fw-semibold">Regístrate aquí</a>
+                <a href="/registro" class="text-decoration-none text-primary fw-semibold">Regístrate aquí</a>
               </p>
             </form>
           </div>
